--- a/versions.properties
+++ b/versions.properties
@@ -7,9 +7,9 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-plugin.dev.reformator.stacktracedecoroutinator=2.4.9
+plugin.dev.reformator.stacktracedecoroutinator=2.5.4
 
-plugin.com.gradleup.shadow=9.0.0-beta13
+plugin.com.gradleup.shadow=9.0.0-rc1
 
 version.ch.qos.logback..logback-classic=1.5.18
 
@@ -23,24 +23,23 @@ version.com.github.ajalt.mordant..mordant-coroutines=3.0.2
 
 version.com.github.ajalt.mordant..mordant-markdown=3.0.2
 
+version.com.saveourtool.okio-extras..okio-extras=1.1.3
+
 ## unused
 version.io.github.cdimascio..dotenv-kotlin=6.5.1
 
 version.io.github.oshai..kotlin-logging=7.0.7
 
-version.kotlin=2.1.20
-## # available=2.1.21-RC
-## # available=2.2.0-Beta1
-## # available=2.2.0-Beta2
+version.kotlin=2.2.0
 
 version.kotlinx.coroutines=1.10.2
 
-version.kotlinx.datetime=0.6.2
+version.kotlinx.datetime=0.7.1-0.6.x-compat
 
-version.kotlinx.serialization=1.8.1
+version.kotlinx.serialization=1.9.0
 
 version.ktobs=0.3.0
 
- version.ktor=3.1.2
+ version.ktor=3.2.1
 
- version.okio=3.11.0
+ version.okio=3.15.0
