--- a/versions.properties
+++ b/versions.properties
@@ -30,7 +30,12 @@ version.io.github.cdimascio..dotenv-kotlin=6.5.1
 
 version.io.github.oshai..kotlin-logging=7.0.7
 
+version.io.github.rejeq..ktobs-core=0.4.0
+
+version.io.github.rejeq..ktobs-ktor=0.4.0
+
 version.kotlin=2.2.0
+## # available=2.2.20-Beta1
 
 version.kotlinx.coroutines=1.10.2
 
@@ -38,8 +43,6 @@ version.kotlinx.datetime=0.7.1-0.6.x-compat
 
 version.kotlinx.serialization=1.9.0
 
-version.ktobs=0.3.0
-
- version.ktor=3.2.1
+ version.ktor=3.2.2
 
  version.okio=3.15.0
