--- a/versions.properties
+++ b/versions.properties
@@ -7,15 +7,15 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-plugin.dev.reformator.stacktracedecoroutinator=2.5.7
+plugin.dev.reformator.stacktracedecoroutinator=2.6.1
 
-plugin.com.gradleup.shadow=9.2.2
+plugin.com.gradleup.shadow=9.3.1
 
-version.ch.qos.logback..logback-classic=1.5.19
+version.ch.qos.logback..logback-classic=1.5.25
 
-version.com.github.ajalt.clikt..clikt=5.0.3
+version.com.github.ajalt.clikt..clikt=5.1.0
 
-version.com.github.ajalt.clikt..clikt-markdown=5.0.3
+version.com.github.ajalt.clikt..clikt-markdown=5.1.0
 
 version.com.github.ajalt.mordant..mordant=3.0.2
 
@@ -28,20 +28,27 @@ version.com.saveourtool.okio-extras..okio-extras=1.1.3
 ## unused
 version.io.github.cdimascio..dotenv-kotlin=6.5.1
 
-version.io.github.oshai..kotlin-logging=7.0.13
+version.io.github.oshai..kotlin-logging=7.0.14
+##                          # available=8.0.00-beta-01
+##                          # available=8.0.00-beta-02
+##                          # available=8.0.00-beta-03
+##                          # available=8.0.00-beta-04
 
-version.io.github.rejeq..ktobs-core=0.4.1
+version.io.github.rejeq..ktobs-core=0.5.0
 
-version.io.github.rejeq..ktobs-ktor=0.4.1
+version.io.github.rejeq..ktobs-ktor=0.5.0
 
-version.kotlin=2.2.20
+version.kotlin=2.3.0
+## # available=2.3.10-RC
+## # available=2.3.20-Beta1
 
 version.kotlinx.coroutines=1.10.2
 
 version.kotlinx.datetime=0.7.1-0.6.x-compat
 
 version.kotlinx.serialization=1.9.0
+##                # available=1.10.0-RC
 
- version.ktor=3.3.0
+ version.ktor=3.3.3
 
- version.okio=3.16.0
+ version.okio=3.16.4
